Fix desktop language selector hover gap

--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -417,7 +417,8 @@
 	}
 
 	&:hover,
-	&:focus-within {
+	&:focus-within,
+	&.is-open {
 		.dropdown-icon {
 			transform: rotate(180deg);
 		}
